syntax = "proto3";

option java_multiple_files = true;
option java_package = "ca.pollutionData";
option java_outer_classname = "PollutionDataProto";

package pollutionData;

service PollutionDataService {
  rpc GetReadings(GetReadingsRequest) returns (GetReadingsResponse) {}
  rpc GetMonthIndex(GetMonthIndexRequest) returns (GetMonthIndexResponse) {}
  rpc GetStatistics(GetStatisticsRequest) returns (GetStatisticsResponse) {}

}

message GetReadingsRequest {
  string area = 1;
  int32 month = 2;
}

message GetReadingsResponse {
  int32 dublin_air_pollution = 1;
  int32 dublin_water_pollution = 2;
  int32 cork_air_pollution = 3;
  int32 cork_water_pollution = 4;
}

message GetMonthIndexRequest {
  string month_name = 1;
}

message GetMonthIndexResponse {
  int32 month_index = 1;
}

message GetStatisticsRequest {
  string area = 1;
}

message GetStatisticsResponse {
  float average_air_pollution = 1;
  float minimum_air_pollution = 2;
  float maximum_air_pollution = 3;
  float average_water_pollution = 4;
  float minimum_water_pollution = 5;
  float maximum_water_pollution = 6;
  string error_message = 7;
}

